.provarCaches/00Df2000001KKNJEA4/objects/Incap311__Response__c.object
<CustomObject>
    <fields>
        <fullName>AutorabitExtId__c</fullName>
        <description>External Id created by AutoRABIT</description>
        <externalId>true</externalId>
        <label>AutorabitExtId__c</label>
        <length>18</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Incap311__Long_Response_Text__c</fullName>
        <label>Long Response Text</label>
        <length>2500</length>
        <type>LongTextArea</type>
    </fields>
    <fields>
        <fullName>Incap311__Order__c</fullName>
        <label>Order</label>
        <precision>7</precision>
        <scale>2</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>Incap311__Response_Code__c</fullName>
        <label>Response Code</label>
        <length>20</length>
        <required>true</required>
        <type>Text</type>
    </fields>
    <label>Response</label>
    <listViews>
        <fullName>Incap311__All</fullName>
        <columns>Incap311__Response_Code__c</columns>
        <columns>NAME</columns>
        <columns>Incap311__Long_Response_Text__c</columns>
        <columns>Incap311__Order__c</columns>
        <columns>UPDATEDBY_USER</columns>
        <filterScope>Everything</filterScope>
        <label>All</label>
    </listViews>
    <nameField>
        <label>Response Name</label>
        <type>Text</type>
    </nameField>
    <pluralLabel>Responses</pluralLabel>
    <sharingModel>ReadWrite</sharingModel>
    <validationRules>
        <fullName>Incap311__Required_Long_Text</fullName>
        <active>true</active>
        <errorConditionFormula>ISBLANK( Incap311__Long_Response_Text__c )</errorConditionFormula>
        <errorDisplayField>Incap311__Long_Response_Text__c</errorDisplayField>
        <errorMessage>Long Response Required</errorMessage>
    </validationRules>
</CustomObject>